<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_55dp"
        android:background="@drawable/rogue_header"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!--  -->

        <LinearLayout
            android:id="@+id/header_setting_control_left"
            android:layout_width="@dimen/dimen_55dp"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="@dimen/dimen_12dp"
                android:layout_height="@dimen/dimen_19dp"
                android:layout_marginLeft="@dimen/dimen_20dp"
                android:background="@drawable/rogue_icon_back" />
        </LinearLayout>

        <ImageView
            android:id="@+id/header_setting_control_right"
            android:layout_width="@dimen/dimen_55dp"
            android:layout_height="@dimen/dimen_55dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_weight="0.03"
            android:padding="@dimen/dimen_16dp"
            android:scaleType="fitXY"
            android:src="@drawable/xml_setting_btn" />

        <z.base.text.BoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimen_17dp"
            android:textStyle="bold" />
    </RelativeLayout>
    <!-- android:background="@drawable/setting_header" -->

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_102dp"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:background="@drawable/rogue_settingsbgsmall"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_6dp"
        android:paddingTop="@dimen/dimen_6dp" >

        <RelativeLayout
            android:id="@+id/rl_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp" >

            <z.base.text.NormalTextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dimen_30dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:text="@string/push_notifycation"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_13dp" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dimen_30dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_alignParentBottom="true"
                android:background="#d2d2d2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45dp" >

            <z.base.text.BoldTextView
                android:id="@+id/text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/img_1"
                android:layout_toRightOf="@+id/text_1"
                android:paddingLeft="@dimen/dimen_15dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:text="@string/default_store"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_10dp"
                android:textStyle="bold" />

            <z.base.text.NormalTextView
                android:id="@+id/text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="@dimen/dimen_30dp"
                android:paddingRight="@dimen/dimen_0dp"
                android:text="@string/default_store"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimen_13dp" />
            <!-- android:src="@drawable/rogue_icon_list_rightarrow" -->

            <ImageView
                android:id="@+id/img_2"
                android:layout_width="@dimen/dimen_9dp"
                android:layout_height="@dimen/dimen_14dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dimen_0dp"
                android:layout_marginRight="@dimen/dimen_30dp"
                android:background="@drawable/rogue_icon_settingsarrow"
                android:scaleType="fitXY" />
            <!-- android:src="@drawable/rogue_icon_storepicker_usa" -->

            <ImageView
                android:id="@+id/img_1"
                android:layout_width="@dimen/dimen_44dp"
                android:layout_height="@dimen/dimen_24dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/img_2"
                android:scaleType="fitXY"
                android:src="@drawable/rogue_icon_flag_usa" />
        </RelativeLayout>

        <ListView
            android:id="@+id/setting_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/tranfer"
            android:dividerHeight="0px"
            android:listSelector="@drawable/tranfer"
            android:scrollbarThumbVertical="@drawable/tranfer"
            android:scrollbarTrackHorizontal="@drawable/tranfer"
            android:scrollbars="none"
            android:visibility="gone" >
        </ListView>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@+id/ll_1"
        android:background="#d2d2d2"
        android:visibility="gone" />

</RelativeLayout>